# HammerTime

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
Frontend/: README.md  app.py  components.py  config.py  styles.py
Frontend/views/: dashboard.py  image_search.py  voice_request.py
backend/: README.md  app.py  graph.py  main.py  nodes.py  read_api_key.py  requirements.txt  schemas.py  server.py  state.py  tools.py
backend/utils/: image_processing.py  request_agent.py
comstruct_challenge/: csvjson.json
